# Khronos-Tutorial

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  cmake-variants.yaml
ModelLoader/: CMakeLists.txt
ModelLoader/include/ModelLoader/: Model.hpp  Vertex.hpp
ModelLoader/src/: Model.cpp
main/: CMakeLists.txt
main/shaders/: shader.frag  shader.vert
main/src/: HelloTriangleApplication.cpp  HelloTriangleApplication.hpp  main.cpp
main/src/device/: Device.cpp  Device.hpp  LogicalDevice.cpp  LogicalDevice.hpp  PhysicalDevice.cpp  PhysicalDevice.hpp  QueueFamilyIndices.hpp  SwapChainSupportDetails.hpp  SwapchainSupportDetails.hpp
main/src/drawing/: CommandBuffer.cpp  CommandBuffer.hpp  CommandPool.cpp  CommandPool.hpp  Framebuffers.cpp  Framebuffers.hpp  SyncObjects.cpp  SyncObjects.hpp
main/src/graphicsPipeline/: Buffer.cpp  Buffer.hpp  BufferMemoryMap.cpp  BufferMemoryMap.hpp  DepthResources.hpp  DescriptorPool.cpp  DescriptorPool.hpp  DescriptorSetLayout.cpp  DescriptorSetLayout.hpp  GraphicsPipeline.cpp  GraphicsPipeline.hpp  Image.cpp  Image.hpp  RenderPass.cpp  RenderPass.hpp  TextureSampler.cpp  TextureSampler.hpp  UniformBufferObject.hpp
main/src/presentation/: ImageView.cpp  ImageView.hpp  SwapChain.cpp  SwapChain.hpp  Swapchain.cpp  Swapchain.hpp
main/src/setup/: DebugMessenger.cpp  DebugMessenger.hpp  Instance.cpp  Window.cpp
main/src/window/: DebugMessenger.cpp  DebugMessenger.hpp  GLFWInit.cpp  GLFWInit.hpp  Instance.hpp  Surface.hpp  Window.cpp  Window.hpp
shaders/: shader.frag  shader.vert
src/: CommandBuffer.cpp  CommandBuffer.hpp  CommandPool.cpp  CommandPool.hpp  DebugMessenger.hpp  Framebuffers.cpp  Framebuffers.hpp  GLFWInit.cpp  GLFWInit.hpp  GraphicsPipeline.cpp  HelloTriangleApplication.cpp  HelloTriangleApplication.hpp  ImageViews.cpp  ImageViews.hpp  PhysicalDevice.cpp  PhysicalDevice.hpp  Surface.cpp  Surface.hpp  SwapChain.cpp  SwapChain.hpp  SyncObjects.cpp  SyncObjects.hpp  main.cpp
src/device/: LogicalDevice.cpp  LogicalDevice.hpp  PhysicalDevice.cpp  PhysicalDevice.hpp
src/drawing/: CommandBuffer.cpp  CommandBuffer.hpp  CommandPool.cpp  Framebuffers.cpp  SyncObjects.cpp
src/graphicsPipeline/: Buffer.cpp  Buffer.hpp  BufferMemoryMap.cpp  BufferMemoryMap.hpp  DescriptorPool.cpp  DescriptorPool.hpp  DescriptorSetLayout.cpp  DescriptorSetLayout.hpp  GraphicsPipeline.cpp  GraphicsPipeline.hpp  Image.cpp  Image.hpp  RenderPass.cpp  TextureImage.cpp  TextureImage.hpp  TextureSampler.cpp  TextureSampler.hpp  UniformBufferObject.hpp  Vertex.hpp
src/loader/: ModelLoader.cpp  ModelLoader.hpp
src/presentation/: ImageView.cpp  ImageView.hpp  ImageViews.cpp  Surface.cpp  Surface.hpp  SwapChain.cpp  SwapChain.hpp
src/setup/: DebugMessenger.cpp  DebugMessenger.hpp  GLFWInit.hpp  Instance.cpp  Instance.hpp  Window.cpp  Window.hpp
